# htmx-experiments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
apps/web-fasthtml/: app.py  templates.py
apps/web1/: app.py
apps/web1/templates/: edit.html  index.html  layout.html  rows.html
apps/web2/: app.py
apps/web2/static/: site.css
apps/web2/templates/: edit.html  index.html  rows.html
apps/web3/: app.py
apps/web3/static/: site.css
apps/web3/templates/: index.html  layout.html  rows.html
apps/web4/: app.py  contacts.json
apps/web4/static/: site.css
apps/web4/templates/: archive_ui.html  edit.html
apps/web5/: app.py
apps/web5/templates/: index.html  new.html
src/htmx_experiments/: __init__.py  archiver.py  contact.py
tests/: test_contact.py
workflows/: tests.yml
